--- a/resources/dark/dark.qss
+++ b/resources/dark/dark.qss
@@ -123,7 +123,8 @@ QComboBox::drop-down {
 }
 
 QComboBox::down-arrow {
-  image: url(":/resources/dark/icons/arrow-down.svg");
+  image: url(":/resources/dark/icons/arrow-down.png");
+  width: 10px;
 }
 
 QFrame#repeaterFrame {
