--- a/resources/light/sepia.qss
+++ b/resources/light/sepia.qss
@@ -116,7 +116,8 @@ QComboBox::drop-down {
 }
 
 QComboBox::down-arrow {
-  image: url(":/resources/light/icons/arrow-down.svg");
+  image: url(":/resources/light/icons/arrow-down.png");
+  width: 10px;
 }
 
 QFrame#repeaterFrame {
